--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 </head>
 <body>
     <nav class="menu-navegation">
-        <img src="../images/logo-simpress.svg" alt="Logo Simpress">
+            <img id="logo" src="../images/logo-simpress.svg" alt="Logo Simpress">        
         <ul>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Enviados</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Aguardando orçamento</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Aguardando aprovação</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Aprovados</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Reprovados</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Em produção</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Pronto para retirar</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Faturar</a>
             </li>
-            <li>
-                <a href=""></a>
+            <li class="item-menu-nav">
+                <a href="">Concluidos</a>
             </li>
         </ul>
     </nav>
