create menu nav

--- a/index.html
+++ b/index.html
@@ -12,30 +12,47 @@
             <img id="logo" src="../images/logo-simpress.svg" alt="Logo Simpress">        
         <ul>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-enviados.svg" alt="">
                 <a href="">Enviados</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-ag-orçamento.svg" alt="">
                 <a href="">Aguardando orçamento</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-ag-aprovacao.svg" alt="">
                 <a href="">Aguardando aprovação</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-aprovados.svg" alt="">
                 <a href="">Aprovados</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-reprovados.svg" alt="">
                 <a href="">Reprovados</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-producao.svg" alt="">
                 <a href="">Em produção</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-prontos.svg" alt="">
                 <a href="">Pronto para retirar</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="images/ico-revisao.svg" alt="">
+                <a href="">Revisão Simpress</a>
+            </li>
+            <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-revisao-reprovada.svg" alt="">
+                <a href="">Revisão Reprovada</a>
+            </li>
+            <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-faturar.svg" alt="">
                 <a href="">Faturar</a>
             </li>
             <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/ico-concluidos.svg" alt="">
                 <a href="">Concluidos</a>
             </li>
         </ul>
