--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>Simpress - FIX</title>
 </head>
 <body>
-    <nav class="menu-navegation">
-            <img id="logo" src="../images/logo-simpress.svg" alt="Logo Simpress">        
-        <ul>
+    <nav class="menu">
+        <img id="logo" src="../images/logo-simpress.svg" alt="Logo Simpress">        
+        <ul id="menu-nav">
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-enviados.svg" alt="">
                 <a href="">Enviados</a>
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-ag-orçamento.svg" alt="">
-                <a href="">Aguardando orçamento</a>
+                <a href="">Ag. orçamento</a>
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-ag-aprovacao.svg" alt="">
-                <a href="">Aguardando aprovação</a>
+                <a href="">Ag. aprovação</a>
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-aprovados.svg" alt="">
@@ -37,15 +37,15 @@
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-prontos.svg" alt="">
-                <a href="">Pronto para retirar</a>
+                <a href="">Retirar</a>
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="images/ico-revisao.svg" alt="">
-                <a href="">Revisão Simpress</a>
+                <a href="">Revisando</a>
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-revisao-reprovada.svg" alt="">
-                <a href="">Revisão Reprovada</a>
+                <a href="">Rev. Reprovada</a>
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-faturar.svg" alt="">
@@ -53,7 +53,7 @@
             </li>
             <li class="item-menu-nav">
                 <img class="ico-nav" src="../images/ico-concluidos.svg" alt="">
-                <a href="">Concluidos</a>
+                <a href="">Concluídos</a>
             </li>
         </ul>
     </nav>
