creat menu navigation

--- a/index.html
+++ b/index.html
@@ -4,58 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/reset.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-menu.css">
     <title>Simpress - FIX</title>
 </head>
 <body>
     <nav class="menu">
-        <img id="logo" src="../images/logo-simpress.svg" alt="Logo Simpress">        
+        <img id="logo" src="../images/menu-nav/logo-simpress.svg" alt="Logo Simpress">   
+        <span id="line-menu"></span>     
         <ul id="menu-nav">
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-enviados.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-dashboard.svg" alt="Ícone dashboard">
+                <a href="">Dashboard</a>
+            </li>
+            <li class="item-menu-nav">
+                <img class="ico-nav" src="../images/menu-nav/ico-enviados.svg" alt="Ícone enviados">
                 <a href="">Enviados</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-ag-orçamento.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-ag-orçamento.svg" alt="Ícone aguardando orçamentos">
                 <a href="">Ag. orçamento</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-ag-aprovacao.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-ag-aprovacao.svg" alt="Ícone aguardando aprovação">
                 <a href="">Ag. aprovação</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-aprovados.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-aprovados.svg" alt="Ícone aprovados">
                 <a href="">Aprovados</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-reprovados.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-reprovados.svg" alt="Ícone reprovados">
                 <a href="">Reprovados</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-producao.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-producao.svg" alt="Ícone em produção">
                 <a href="">Em produção</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-prontos.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-prontos.svg" alt="Ícone retirar">
                 <a href="">Retirar</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="images/ico-revisao.svg" alt="">
+                <img class="ico-nav" src="images/menu-nav/ico-revisao.svg" alt="Ícone revisando">
                 <a href="">Revisando</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-revisao-reprovada.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-revisao-reprovada.svg" alt="Ícone revisão reprovada">
                 <a href="">Rev. Reprovada</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-faturar.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-faturar.svg" alt="Ícone faturar">
                 <a href="">Faturar</a>
             </li>
             <li class="item-menu-nav">
-                <img class="ico-nav" src="../images/ico-concluidos.svg" alt="">
+                <img class="ico-nav" src="../images/menu-nav/ico-concluidos.svg" alt="Ícone concluídos">
                 <a href="">Concluídos</a>
             </li>
         </ul>
+        <span id="line-menu"></span>
+        <div id="info-login">
+            <img id="ico-user" src="../images/menu-nav/ico-user.svg" alt="Ícone usuário">
+            <ul id="info-user">
+                <li>
+                    <a href="" id="username">Nome do Usuário</a>
+                </li>
+                <li>
+                    <a href="" id="institution">Instituição</a>
+                </li>
+            </ul>
+            <img id="ico-exit" src="../images/menu-nav/ico-exit.svg" alt="Ícone sair">
+        </div>
     </nav>
     <section class="content">
 
