Business logo remove

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simpress x FIX</title>
+    <title>Controle de aparelhos</title>
     <link rel="shortcut icon" href="../images/favicon/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/general.css">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="menu">
-        <img id="logo" src="../images/menu-nav/logo-simpress.svg" alt="Logo Simpress">   
+        <img id="logo" src="" alt="Logo">   
         <span class="line-menu"></span>     
         <ul id="menu-nav">
             <li class="item-menu-nav">
@@ -93,43 +93,41 @@
         </header>
             <span id="line-header"></span>
         <section class="itens">
-              <div class="item">
-                    <h3>GALAXY A32</h3>
-                    <span class="imei">
-                        <picture>
-                            <img class="iconCard" src="../images/cards/imei.svg" alt="Ícone imei">
-                        </picture>
-                        <span>
-                            <h4>Imei:</h4>
-                            <p>3572634112763</p>
-                        </span>
+            <div class="item">
+                <h3>GALAXY A32</h3>
+                <span class="imei">
+                    <picture>
+                        <img class="iconCard" src="../images/cards/imei.svg" alt="Ícone imei">
+                    </picture>
+                    <span>
+                        <h4>Imei:</h4>
+                        <p>3572634112763</p>
                     </span>
-                    <span class="data">
-                        <picture>
-                            <img class="iconCard" src="../images/cards/calendar.svg" alt="Ícone data de envio">
-                        </picture>
-                        <span>
-                            <h4>Data de envio:</h4>
-                            <p>20/20/2000</p>
-                        </span>
+                </span>
+                <span class="data">
+                    <picture>
+                        <img class="iconCard" src="../images/cards/calendar.svg" alt="Ícone data de envio">
+                    </picture>
+                    <span>
+                        <h4>Data de envio:</h4>
+                        <p>20/20/2000</p>
                     </span>
-                    <span class="defect">
-                        <picture>
-                            <img class="iconCard" src="../images/cards/defect.svg" alt="Ícone defeito">
-                        </picture>
-                        <span>
-                            <h4>Defeito informado:</h4>
-                            <p>Aparelho não está ligando, tela quabrada, bateria estufada, vidro da camera tricado.</p>
-                        </span>
+                </span>
+                <span class="defect">
+                    <picture>
+                        <img class="iconCard" src="../images/cards/defect.svg" alt="Ícone defeito">
+                    </picture>
+                    <span>
+                        <h4>Defeito informado:</h4>
+                        <p>Aparelho não está ligando, tela quabrada, bateria estufada, vidro da camera tricado.</p>
                     </span>
-                    <div class="buttons">
-                        <input id="btnReceived" type="button" value="Recebido">                    
-                        <input id="btnNoReceived" type="button" value="Não recebido">
-                    </div>
+                </span>
+                <div class="buttons">
+                    <input id="btnReceived" type="button" value="Recebido">                    
+                    <input id="btnNoReceived" type="button" value="Não recebido">
                 </div>
-        </section>
-        <footer></footer>
+            </div>
+        </section>        
     </section>    
-        
 </body>
 </html>
