remoção das logos empresariais de teste

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de aparelhos</title>
-    <link rel="shortcut icon" href="../images/favicon/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/menu-nav/seu-logo-aqui.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/general.css">
     <link rel="stylesheet" href="../styles/menu.css">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="menu">
-        <img id="logo" src="" alt="Logo">   
+        <img id="logo" src="../images/menu-nav/seu-logo-aqui.png" alt="Logo">   
         <span class="line-menu"></span>     
         <ul id="menu-nav">
             <li class="item-menu-nav">
@@ -101,7 +101,7 @@
                     </picture>
                     <span>
                         <h4>Imei:</h4>
-                        <p>3572634112763</p>
+                        <p>90909090909090</p>
                     </span>
                 </span>
                 <span class="data">
